# Botarr

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  botarr.service  build.rs  config.example.json  docker-compose.yml  openapi.yaml  out.txt  scratch.rs  servers.json
.githooks/: pre-push
.github/workflows/: ci.yml
docs/: plugin.md
plugins/: autodl.conf.lua  autodl.lua
src/: api.rs  config.rs  db.rs  irc_client.rs  main.rs  postprocess.rs
src/api/: mod.rs  models.rs
src/api/handlers/: downloads.rs  history.rs  mod.rs  settings.rs  system.rs
src/plugin/: mod.rs
src/xdcc/: client.rs  mod.rs  monitor.rs  search.rs  transfer.rs
src/xdcc/client/: dcc.rs  mod.rs
src/xdcc/providers/: mod.rs  nibl.rs  skullxdcc.rs  xdcc_eu.rs  xdcc_rocks.rs
src/xdcc/transfer/: mod.rs  models.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css  theme.ts  types.ts
web/src/components/: AutodlTab.tsx  HistoryLog.tsx  HistoryTab.tsx  IrcClientTab.tsx  ManualDownloadModal.tsx  PluginsTab.tsx  SearchBar.tsx  SearchResults.tsx  SettingsTab.tsx  StatsBar.tsx  Tabs.tsx  Toast.tsx  TransferList.tsx  TransferLogsModal.tsx
web/src/components/autodl/: FilterForm.tsx  FilterList.tsx
web/src/components/history/: DownloadHistory.tsx  SearchHistory.tsx
web/src/components/settings/: GeneralSettings.tsx  NetworkSettings.tsx
web/src/hooks/: useAutodl.ts  useHistory.ts  useSettings.ts  useToast.ts
web/src/utils/: format.ts
