[package]
name = "botarr"
version = "0.1.1"
edition = "2021"
description = "High-performance XDCC download manager and indexer"

[dependencies]
# Async Runtime
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3"

# Web Server
axum = { version = "0.8.7", features = ["macros"] }

# HTTP Client
reqwest = { version = "0.12.25", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1"

# XDCC
tokio-util = "0.7.17"
uuid = { version = "1", features = ["v4"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
scraper = "0.20"
async-trait = "0.1"
rust-embed = "8.5.0"
mime_guess = "2.0.4"
rusqlite = { version = "0.32", features = ["bundled"] }

# TLS/SSL Support
tokio-native-tls = "0.3"
native-tls = "0.2"

# SOCKS5 Proxy
tokio-socks = "0.5"
